ingress/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: registry-service_mapping
      host: registry.cluster.sms.fortaleza
      prefix: /
      service: registry:5000
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    k8s-app: registry
    kubernetes.io/name: KubeRegistry
  name: registry
  namespace: kube-system
spec:
  clusterIP: 10.233.38.41
  clusterIPs:
  - 10.233.38.41
  ports:
  - name: registry
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    k8s-app: registry
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
