ingress/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn-fe
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: longhorn.cluster.sms.fortaleza
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
